# regenova-intel-peptide-prescribing-assistant

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
apps/admin/: streamlit_app.py
apps/api/: config.py  main.py
apps/api/routers/: audit.py  chat.py  health.py  ingest.py  sources.py  upload.py
apps/api/schemas/: chat.py  patient_case.py  source.py
apps/api/services/: answer_composer.py  audit_store.py  citation_service.py  ranking_service.py  retrieval_service.py  safety_rules.py
apps/frontend/: index.html
docs/: ARCHITECTURE.md  CLINICAL_GOVERNANCE.md  DATA_INGESTION_PLAYBOOK.md  DEPLOYMENT.md  SECURITY_AND_PRIVACY.md  SOURCE_TIERING.md
knowledge/extraction/: claim_extractor.py  entity_linker.py  triple_extractor.py
knowledge/graph/: graph_builder.py  graph_query.py
knowledge/scoring/: confidence.py  evidence_tiering.py
pipelines/: ingest_documents.py  ingest_forums.py  ingest_pubmed.py  ingest_skool_community.py  ingest_skool_courses.py  ingest_websites.py  ingest_youtube.py  run_all_ingestion.py
pipelines/common/: chunking.py  cleaners.py  metadata_enrichment.py  models.py  storage.py
prompts/extraction/: claims.txt  triples.txt
prompts/generation/: clinician_answer.txt  safety_guardrails.txt
scripts/: bootstrap.sh  init_db.py  reindex.py  smoke_test.py
tests/: test_citation_integrity.py  test_safety_rules.py  test_source_tiering.py
